RESOLVED FIXED178333
Don't try to guess plugin MIME type from a file extension in a URL (no observable effect)
https://bugs.webkit.org/show_bug.cgi?id=178333
Summary Don't try to guess plugin MIME type from a file extension in a URL (no observ...
Maciej Stachowiak
Reported 2017-10-16 02:32:21 PDT
Guessing MIME type from a file extension in a URL is wrong
Attachments
For EWS testing (1.26 KB, patch)
2017-10-16 02:33 PDT, Maciej Stachowiak
no flags
Patch (4.82 KB, patch)
2017-10-31 23:54 PDT, Maciej Stachowiak
no flags
Patch (12.19 KB, patch)
2017-11-01 00:19 PDT, Maciej Stachowiak
no flags
Patch for landing (8.54 KB, patch)
2017-11-01 16:36 PDT, Maciej Stachowiak
no flags
Patch for landing (12.14 KB, patch)
2017-11-02 22:32 PDT, Maciej Stachowiak
no flags
Patch for landing (12.19 KB, patch)
2017-11-02 22:37 PDT, Maciej Stachowiak
no flags
Maciej Stachowiak
Comment 1 2017-10-16 02:33:08 PDT
Created attachment 323880 [details] For EWS testing
Build Bot
Comment 2 2017-10-16 02:35:24 PDT
Attachment 323880 [details] did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Maciej Stachowiak
Comment 3 2017-10-31 23:54:40 PDT
Maciej Stachowiak
Comment 4 2017-11-01 00:19:41 PDT
Alexey Proskuryakov
Comment 5 2017-11-01 16:10:36 PDT
Comment on attachment 325549 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=325549&action=review > Source/WebCore/ChangeLog:3 > + Guessing MIME type from a file extension in a URL is wrong It would be helpful if the title somehow conveyed that this is about plug-ins, and that there is no observable difference expected.
Maciej Stachowiak
Comment 6 2017-11-01 16:36:04 PDT
Created attachment 325650 [details] Patch for landing
WebKit Commit Bot
Comment 7 2017-11-01 17:02:45 PDT
Comment on attachment 325650 [details] Patch for landing Rejecting attachment 325650 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-03', 'build', '--no-clean', '--no-update', '--build-style=release', '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: c /Volumes/Data/EWS/WebKit/Source/WebKit/UIProcess/Cocoa/UserMediaCaptureManagerProxy.cpp -o /Volumes/Data/EWS/WebKit/WebKitBuild/WebKit.build/Release/WebKit.build/Objects-normal/x86_64/UserMediaCaptureManagerProxy.o ** BUILD FAILED ** The following build commands failed: CompileC /Volumes/Data/EWS/WebKit/WebKitBuild/WebKit.build/Release/WebKit.build/Objects-normal/x86_64/PluginView.o WebProcess/Plugins/PluginView.cpp normal x86_64 c++ com.apple.compilers.llvm.clang.1_0.compiler (1 failure) Full output: http://webkit-queues.webkit.org/results/5068376
Maciej Stachowiak
Comment 8 2017-11-02 22:32:23 PDT
Created attachment 325854 [details] Patch for landing
WebKit Commit Bot
Comment 9 2017-11-02 22:33:35 PDT
Comment on attachment 325854 [details] Patch for landing Rejecting attachment 325854 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-03', 'validate-changelog', '--check-oops', '--non-interactive', 325854, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit ChangeLog entry in Source/WebKit/ChangeLog contains OOPS!. Full output: http://webkit-queues.webkit.org/results/5086167
Maciej Stachowiak
Comment 10 2017-11-02 22:37:17 PDT
Created attachment 325855 [details] Patch for landing
WebKit Commit Bot
Comment 11 2017-11-02 23:08:15 PDT
Comment on attachment 325855 [details] Patch for landing Clearing flags on attachment: 325855 Committed r224387: <https://trac.webkit.org/changeset/224387>
WebKit Commit Bot
Comment 12 2017-11-02 23:08:17 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 13 2017-11-15 13:04:40 PST
Note You need to log in before you can comment on or make changes to this bug.